CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(unet)

OPTION(WITH_DEBUG "whether to build with debug" ON)
OPTION(PRINT_TIME "whether to print time" ON)
OPTION(USE_CPP11 "whether to use cpp11" ON)
OPTION(USE_THREAD "whether to use thread" ON)

IF(WITH_DEBUG)
    IF(CMAKE_HOST_SYSTEM_NAME MATCHES Linux)
        SET(CXX_COMPLIER_FLAG "-g -Wall")
        MESSAGE(STATUS "YOU COMPLIE THE CODE WITH DEBUG!!")
    ENDIF()
ELSE()
    MESSAGE(STATUS "YOU COMPLIE THE CODE WITHOUT DEBUG!")
ENDIF()


IF(PRINT_TIME)
    ADD_DEFINITIONS(-DPRINT_TIME)
    MESSAGE(STATUS "YOU SELECT PRINT TIME!")
ELSE()
    MESSAGE(STATUS "YOU NOT SELECT PRINT TIME!")
ENDIF()

IF(USE_CPP11)
    IF(CMAKE_HOST_SYSTEM_NAME MATCHES Linux)
        SET(CPP11_ENABLED_FLAGS "-std=c++11")
        MESSAGE(STATUS "USE C++11!")
    ENDIF()
ENDIF()

IF(USE_THREAD)
    IF(CMAKE_HOST_SYSTEM_NAME MATCHES Linux)
        SET(CXX_FLAGS_THREAD "-lpthread")
        MESSAGE(STATUS "USR THREAD")
    ENDIF()
ENDIF()

##########SET COMPLIER FLAG AND PATH##########
SET(CMAKE_CXX_FLAGS "${CXX_COMPLIER_FLAG} ${CPP11_ENABLED_FLAGS} ${CXX_FLAGS_THREAD}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
SET(LINUX_TOOLCHAIN_ROOT /usr/bin)
SET(CMAKE_CXX_COMPLIER "${LINUX_TOOLCHAIN_ROOT}/g++")
MESSAGE(STATUS "C++ COMPLIER: ${CMAKE_CXX_COMPLIER}")

##########SET LIBRARY AND HEAD FILE PATH##########
SET(PROJECT_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/include)
MESSAGE(STATUS "PROJECT_INCLUDE_PATH: ${PROJECT_INCLUDE_PATH}")
SET(PROJECT_LIBRARY_PATH ${PROJECT_SOURCE_DIR}/lib)
MESSAGE(STATUS "PROJECT_LIBRARY_PATH: ${PROJECT_LIBRARY_PATH}")

INCLUDE_DIRECTORIES(${PROJECT_INCLUDE_PATH})
MESSAGE(STATUS "INCLUDE PATH: ${PROJECT_INCLUDE_PATH}")
LINK_DIRECTORIES(${PROJECT_LIBRARY_PATH})
MESSAGE(STATUS "LIBRARY PATH: ${PROJECT_LIBRARY_PATH}")

##########################SET LIBRARY#######################
SET(THREAD_LIB pthread)
MESSAGE(STATUS "unet:  ${THREAD_LIB}")

########################SET SOURCE FILES#######################
SET(PROJECT_SOURCE_PATH ${PROJECT_SOURCE_DIR}/src)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Accepter.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Alloc.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Buffer.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Clock.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Condition.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Directory.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/EPoller.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Event.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/EventDemultiplexer.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/EventLoop.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/EventMap.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/File.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Global.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/InetAddress.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/LogBuffer.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Log.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/LogFile.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/LogFormat.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Mutex.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Poller.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/RDMutex.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Selecter.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/SignalEvent.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Socket.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/SocketEvent.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/SpinLock.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/TaskPool.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/TcpConnection.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/TcpConnectionMap.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/TcpServer.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Thread.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/ThreadPool.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/Timer.cc)
SET(SRC_LIST ${SRC_LIST} ${PROJECT_SOURCE_PATH}/TimerEvent.cc)
MESSAGE(STATUS "SOURCE PATH:  ${SRC_LIST}")

######################SET LIBRAYR LINK#####################
ADD_LIBRARY(unet SHARED ${SRC_LIST})
TARGET_LINK_LIBRARIES(unet ${THREAD_LIB})


